# intelligent-terminal

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  OpenConsole.slnx
.claude/: settings.local.json
doc/: security-model.md
src/cascadia/CascadiaPackage/: CascadiaPackage.wapproj  Package-Dev.appxmanifest
src/cascadia/TerminalApp/: AppActionHandlers.cpp  FreOverlay.cpp  FreOverlay.xaml  Tab.cpp  TerminalPage.Protocol.cpp  TerminalPage.cpp  TerminalPage.h  TerminalPage.idl  TerminalWindow.h
src/cascadia/TerminalConnection/: AcpConnection.cpp
src/cascadia/TerminalControl/: ControlCore.cpp  ControlCore.h  ControlCore.idl  TermControl.cpp  TermControl.h  TermControl.idl
src/cascadia/TerminalProtocol/: TerminalProtocol.idl
src/cascadia/TerminalSettingsEditor/: AIAgents.xaml
src/cascadia/TerminalSettingsModel/: ActionAndArgs.cpp  ActionArgs.idl  ActionMap.cpp  (+4 more)
wta/: AGENTS.md  Cargo.toml  PLAN.md  sync-hooks.ps1
wta/agent-hooks-plugin/hooks/: send-event.ps1
wta/gemini-extension/hooks/: send-event.ps1
wta/src/: agent_hooks_installer.rs  agent_registry.rs  agent_sessions.rs  app.rs  claude_hooks_installer.rs  coordinator.rs  event.rs  history_loader.rs  main.rs  preflight.rs  shared_host.rs  theme.rs
wta/src/protocol/: mod.rs
wta/src/protocol/acp/: client.rs
wta/src/protocol/mcp/: server.rs
wta/src/shell/: shell_manager.rs
wta/src/shell/wt_channel/: cli_channel.rs  mod.rs  pipe_channel.rs  types.rs  vt_channel.rs
wta/src/ui/: agents_view.rs  chat.rs  input.rs  layout.rs  mod.rs  permission.rs  recommendations.rs  setup.rs  status_bar.rs  title_bar.rs
(+32 files in other folders)
