[package]
name = "wta"
version = "0.1.0"
edition = "2021"
description = "Windows Terminal Agent — ACP TUI client / MCP tool server"

[[bin]]
name = "wta"
path = "src/main.rs"

[dependencies]
agent-client-protocol = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
anyhow = "1"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
unicode-width = "0.2"
textwrap = "0.16"
rmcp = { version = "1.1", features = ["server", "transport-io", "macros"] }
serde = { version = "1", features = ["derive"] }
